--- a/web/cadastroCategoria.html
+++ b/web/cadastroCategoria.html
@@ -156,40 +156,6 @@ and open the template in the editor.
             td {
                 text-align: center;
             }
-            .lista{
-                display: inline-block;
-                background-color: #C4C4C4;
-                padding: 2px;
-                position: absolute;
-                left: 3%;
-                top: -25%;
-            }
-            .lista li {
-                display: inline;
-                background-color: #C4C4C4;
-                padding: 10px;
-                border-radius: 50%
-            }
-
-            .sublista{
-                display: none;
-                position: absolute;
-                left: 50px;
-                top: 47px;
-                height: 25px;
-                background-color: #C4C4C4;
-                min-width: 130px;
-                z-index: 1;
-
-            }
-
-            .sublista ul li{
-                display: block;
-                text-align: left;
-            }
-            .expande-sublista:hover .sublista{
-                display: block;
-            }
             .categoria {
                 font-family: Roboto;
                 font-style: normal;
@@ -206,14 +172,6 @@ and open the template in the editor.
                 font-style: normal;
                 font-weight: normal;
                 font-size: 20px;
-                line-height: 14px;
-                color: black;
-            }
-            li {
-                font-family: Roboto;
-                font-style: normal;
-                font-weight: normal;
-                font-size: 18px;
                 line-height: 14px;
                 color: black;
             }
@@ -235,7 +193,7 @@ and open the template in the editor.
             }
             .categoria {
                 position: absolute;
-                left:20px;
+                left:65px;
                 top:18px;
                 font-family: Roboto;
                 font-style: normal;
@@ -302,14 +260,7 @@ and open the template in the editor.
 
             </form>
             <div class="menu">
-                <ul class="lista">
-                    <li class="expande-sublista"> <a class="categoria">Categoria</a> 
-                        <div class="sublista">
-                            <div>
-                                <div><a class="index" href="index.html">Tela Inicial</a></div>
-                            </div>
-                        </div>
-                </ul>
+                <div class="categoria">Categoria</div>
 
                 <div class="triangulo"></div>
             </div>
