--- a/web/consultaProduto.html
+++ b/web/consultaProduto.html
@@ -155,44 +155,10 @@ and open the template in the editor.
             {
                 border: black solid 1px;   
             }
-            .lista{
-                display: inline-block;
-                background-color: #C4C4C4;
-                padding: 2px;
-                position: absolute;
-                left: 3%;
-                top: -25%;
-            }
-            .lista li {
-                display: inline;
-                background-color: #C4C4C4;
-                padding: 10px;
-                border-radius: 50%
-            }
-
-            .sublista{
-                display: none;
-                position: absolute;
-                left: 50px;
-                top: 45px;
-                height: 25px;
-                background-color: #C4C4C4;
-                min-width: 130px;
-                z-index: 1;
-
-            }
-
-            .sublista ul li{
-                display: block;
-                text-align: left;
-            }
-            .expande-sublista:hover .sublista{
-                display: block;
-            }
             .consulta {
-                position: relative;
-                left:-20px;
-                top: 13px;
+                position: absolute;
+                left: 35px;
+                top: 19px;
                 font-family: Roboto;
                 font-style: normal;
                 font-weight: normal;
@@ -260,14 +226,7 @@ and open the template in the editor.
             -->
         </div>
         <div class="menu">
-            <ul class="lista">
-                <li class="expande-sublista"> <a class="consulta">Consulta Produto</a> 
-                    <div class="sublista">
-                        <div>
-                            <div><a class="index" href="index.html">Tela Inicial</a></div>
-                        </div>
-                    </div>
-            </ul>
+           <div class="consulta">Consulta Produto</div>
 
             <div id="dados">
                 <table>
