--- a/web/consultaProduto.html
+++ b/web/consultaProduto.html
@@ -205,9 +205,17 @@ and open the template in the editor.
                 text-decoration:none; 
             }
             .excluir {
+                top:0px;
+                padding: 2px;
+                font-size: 15px;
+                background-color: white;
                 color: red;
             }
             .alterar {
+                top:0px;
+                padding: 2px;
+                font-size: 15px;
+                background-color: white;
                 color: blue;
             }
             .dp-menu ul {
