--- a/web/cadastroCategoria.html
+++ b/web/cadastroCategoria.html
@@ -238,9 +238,17 @@ and open the template in the editor.
                 text-decoration:none; 
             }
             .excluir {
+                top:0px;
+                padding: 2px;
+                font-size: 15px;
+                background-color: white;
                 color: red;
             }
             .alterar {
+                top:0px;
+                padding: 2px;
+                font-size: 15px;
+                background-color: white;
                 color: blue;
             }
             .dp-menu ul {
@@ -281,28 +289,28 @@ and open the template in the editor.
                 display: block;
             }
             .cadastros{
-               left:50px;
-               top:3px;
-               font-family: Roboto;
-               font-style: normal;
-               font-weight: normal;
-               font-size: 20px;
-               line-height: 14px;
-               color: black;
+                left:50px;
+                top:3px;
+                font-family: Roboto;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 20px;
+                line-height: 14px;
+                color: black;
             }
             a{
-               position: relative;
-               left: 60px;
-               top:1px;
-               text-decoration: none;
-               width: 50px;
-               height: 10px;
-               margin-bottom: 10px;
-               margin-top: -5px;
-               color:black;
-               background-color: #C4C4C4;
+                position: relative;
+                left: 60px;
+                top:1px;
+                text-decoration: none;
+                width: 50px;
+                height: 10px;
+                margin-bottom: 10px;
+                margin-top: -5px;
+                color:black;
+                background-color: #C4C4C4;
             }
-            
+
 
         </style>
 
