--- a/web/cadastroProduto.html
+++ b/web/cadastroProduto.html
@@ -300,25 +300,25 @@ and open the template in the editor.
                 display: block;
             }
             .produtos{
-               left:50px;
-               top:3px;
-               font-family: Roboto;
-               font-style: normal;
-               font-weight: normal;
-               font-size: 20px;
-               line-height: 14px;
-               color: black;
+                left:50px;
+                top:3px;
+                font-family: Roboto;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 20px;
+                line-height: 14px;
+                color: black;
             }
             a{
-               position: relative;
-               left: 60px;
-               text-decoration: none;
-               width: 50px;
-               height: 10px;
-               margin-bottom: 10px;
-               margin-top: -5px;
-               color:black;
-               background-color: #C4C4C4;
+                position: relative;
+                left: 60px;
+                text-decoration: none;
+                width: 50px;
+                height: 10px;
+                margin-bottom: 10px;
+                margin-top: -5px;
+                color:black;
+                background-color: #C4C4C4;
             }
 
         </style>
@@ -329,67 +329,75 @@ and open the template in the editor.
                     url: "http://localhost:8080/Trabalho/Venda/Categoria",
                     dataType: 'json',
                     success: function (res) {
-                            display(res);
-                        }
+                        display(res);
+                    }
                 });
             }
             function display(dados) {
                 var text = "";
                 for (ob in dados) {
-                    text += "<option value="+dados[ob].id+">"+ dados[ob].descricao + "</option>";
+                    text += "<option value=" + dados[ob].id + ">" + dados[ob].descricao + "</option>";
                 }
                 document.getElementById("combobox").innerHTML = text;
             }
         </script>
         <script>
             $(document).ready(function () {
-                buscaCategorias();
-
-                //gravar dados
-                $("#gravar").click(function () {
-                    var payload = {
-                        id: $("#id").val(),
-                        descricao: $("#descricao").val(),
-                        qtdeEstoque: $("#qtdeEstoque").val(),
-                        valor: $("#valor").val(),
-                        categoria_id: $("#combobox").val()
-                    };
-                    payload = JSON.stringify(payload);
-                    $.ajax({
-                        type: "POST",
-                        url: "http://localhost:8080/Trabalho/Venda/Produto",
-                        data: payload,
-                        dataType: 'json',
-                        contentType: "application/json; charset=utf-8",
-                        success: function (data, status) {
-                            alert('inserido com sucesso ');
-                        }
-                    });
-                });
-
-                $("#alterar").click(function () {
-                    var payload = {
-                        id: $("#id").val(),
-                        descricao: $("#descricao").val(),
-                        qtdeEstoque: $("#qtdeEstoque").val(),
-                        valor: $("#valor").val(),
-                        categoria_id: $("#categoria_id").val(),
-                    };
-                    payload = JSON.stringify(payload);
-
-                    $.ajax({
-                        type: "PUT",
-                        url: "http://localhost:8080/Trabalho/Venda/Produto",
-                        data: payload,
-                        dataType: 'json',
-                        contentType: "application/json; charset=utf-8",
-                        success: function (data, status) {
-                            alert('alterado com sucesso ');
-                            setTimeout("window.location='consultaProduto.html'", 500);
-                        }
-                    });
+            buscaCategorias();
+                    //gravar dados
+                    /*{
+                     * "id": 113,
+                            "descricao": "sabão",
+                            "qtdeEstoque": 11,
+                            "valor": 10,
+                            "categoria":{
+                            "id":1
+                            }
+                    }*/
+            $("#gravar").click(function () {
+                var payload = {
+                    id: $("#id").val(),
+                    descricao: $("#descricao").val(),
+                    qtdeEstoque: $("#qtdeEstoque").val(),
+                    valor: $("#valor").val(),
+                    categoria_id: $("#combobox").val()
+                };
+                payload = JSON.stringify(payload);
+                $.ajax({
+                    type: "POST",
+                    url: "http://localhost:8080/Trabalho/Venda/Produto",
+                    data: payload,
+                    dataType: 'json',
+                    contentType: "application/json; charset=utf-8",
+                    success: function (data, status) {
+                        alert('inserido com sucesso ');
+                    }
                 });
             });
+
+            $("#alterar").click(function () {
+            var payload = {
+            id: $("#id").val(),
+                    descricao: $("#descricao").val(),
+                    qtdeEstoque: $("#qtdeEstoque").val(),
+                    valor: $("#valor").val(),
+                    categoria_id: $("#categoria_id").val(),
+            };
+                    payload = JSON.stringify(payload);
+                    $.ajax({
+                    type: "PUT",
+                            url: "http://localhost:8080/Trabalho/Venda/Produto",
+                            data: payload,
+                            dataType: 'json',
+                            contentType: "application/json; charset=utf-8",
+                            success: function (data, status) {
+                            alert('alterado com sucesso ');
+                                    setTimeout("window.location='consultaProduto.html'", 500);
+                            }
+                    });
+            });
+            }
+            );
         </script>
     </head>
     <body>
@@ -430,15 +438,15 @@ and open the template in the editor.
         </div>
         <div class="menu">
             <nav class="dp-menu">
-                    <ul>
-                        <li><a class="produtos" href="#"><font color="black">Produto</font></a>
-                            <ul>
-                                <li><a class="voltar" href="index.html">Voltar</a></li>
-                            </ul>
-                        </li>
-                    </ul>   
+                <ul>
+                    <li><a class="produtos" href="#"><font color="black">Produto</font></a>
+                        <ul>
+                            <li><a class="voltar" href="index.html">Voltar</a></li>
+                        </ul>
+                    </li>
+                </ul>   
 
-                </nav>
+            </nav>
             <div class="triangulo"></div>
         </div>
         <div class="copy">
