--- a/web/consultaProduto.html
+++ b/web/consultaProduto.html
@@ -327,7 +327,7 @@ and open the template in the editor.
                     <th>Descrição</th>
                     <th>Preço</th>
                     <th>Estoque</th>
-                    <th>Categoria</th>
+                    <th>Categoria_id</th>
                     <th>⠀⠀⠀⠀⠀⠀⠀</th>
                     <th>⠀⠀⠀⠀⠀⠀⠀</th>
                     </thead>
