--- a/web/cadastroProduto.html
+++ b/web/cadastroProduto.html
@@ -328,8 +328,8 @@ and open the template in the editor.
                     type: "GET",
                     url: "http://localhost:8080/Trabalho/Venda/Categoria",
                     dataType: 'json',
-                    success: function (res) {
-                        display(res);
+                    success: function (data) {
+                        display(data);
                     }
                 });
             }
